tests/dataset/tpc-ds/compiler/pl/q16.error
run: exit status 2
ERROR: /tmp/q16.pl:89: user:main >=/2: Type error: `[]' expected, found `"2000-03-01"' (a string) ("x" must hold one character)
